검색페이지 간단 구현

--- a/bin/main/templates/kobis/rank.html
+++ b/bin/main/templates/kobis/rank.html
@@ -77,7 +77,7 @@
         				  lang:'ko',
         				  timepicker:false,
         				  /* format:'Y-m-d', */
-        				  minDate: new Date
+        				  maxDate: new Date
         			});
         		});
         </script>
