--- a/bin/main/templates/movie/recommend.html
+++ b/bin/main/templates/movie/recommend.html
@@ -22,16 +22,16 @@
             <!-- 슬라이더 -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="/movie/detail?title=백두산"><img th:src="@{/images/mvimg1.jpg}" alt="" class="d-block"></a>
+                    <img th:src="@{/images/mvimg1.jpg}" alt="" class="d-block">
                 </div>
                 <div class="carousel-item">
-                    <a href="/movie/detail?title=1917"><img th:src="@{/images/mvimg2.jpg}" alt="" class="d-block"></a>
+                    <img th:src="@{/images/mvimg2.jpg}" alt="" class="d-block">
                 </div>
                 <div class="carousel-item">
-                    <a href="/movie/detail?title=라라랜드"><img th:src="@{/images/mvimg3.jpg}" alt="" class="d-block"></a>
+                    <img th:src="@{/images/mvimg3.jpg}" alt="" class="d-block">
                 </div>
                 <div class="carousel-item">
-                    <a href="/movie/detail?title=극한직업&genre=11"><img th:src="@{/images/mvimg4.jpg}" alt="" class="d-block"></a>
+                    <img th:src="@{/images/mvimg4.jpg}" alt="" class="d-block">
                 </div>
             </div>
             <!-- 컨트롤 -->
