--- a/src/main/resources/templates/kobis/rank.html
+++ b/src/main/resources/templates/kobis/rank.html
@@ -77,7 +77,7 @@
         				  lang:'ko',
         				  timepicker:false,
         				  /* format:'Y-m-d', */
-        				  minDate: new Date
+        				  maxDate: new Date
         			});
         		});
         </script>
