--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -15,6 +15,7 @@ $(document).ready(()=>{
 	let apiUrl = "https://api.themoviedb.org/3/movie/";
 	let apiKey = "?api_key=a1c25fa7fbd7117d8d4d73bf1892deae";
 	let language = "&language=ko&append_to_response=credits";
+	let userId = $("#userId").val();// session에 저장된 userId
 	apiUrl += movieId; 
 	apiUrl += apiKey;
 	apiUrl += language;
@@ -49,6 +50,8 @@ $(document).ready(()=>{
 			let overview = response.overview;
 			// 영화 개봉일
 			let release = response.release_date;
+			// 영화 런타임
+			let runtime = response.runtime;
 			// 영화 캐스팅
 			let cast = response.credits.cast;
 			let arrActor =new Array();
@@ -61,7 +64,6 @@ $(document).ready(()=>{
 					async:false,
 					success:(response)=>{
 						arrActor[i] = response.name;
-						console.log(arrActor[i]);
 						let aka = response.also_known_as;
 						for(let j=0;j<aka.length;j++){
 							let regex = /([\uAC00-\uD7AF\u1100-\u11FF\u3130-\u318F]+)/g;
@@ -80,7 +82,7 @@ $(document).ready(()=>{
 				});
 			}
 			$("#movieBox").empty();
-			let temp_html = `<div id="movieDataBox" class="col-sm-6">
+			let temp_html = `<div id="movieDataBox" class="col-sm-7">
 				<h1 class="fw-bold">${title}</h1>
 				<h4 class="fw-bold">${tagline}</h4>
 				<div class="mb-3"><span>${overview}</span></div>
@@ -88,25 +90,36 @@ $(document).ready(()=>{
 	                <ul class="list-unstyled">	
 	                    <li class="text-secondary fw-bold"><span class="me-3">출연</span><span>${actors}</span></li>
 	                    <li class="text-secondary fw-bold"><span class="me-3">장르</span><span>${genre}</span></li>
-	                    <li class="text-secondary fw-bold"><span class="me-3">개봉</span><span>${release}</span></li>
+	                    <li class="text-secondary fw-bold"><span class="me-3">개요</span><span>${release} | ${runtime}분</span></li>
 	                </ul>
+	                
+                </div>
+                <div class="d-flex justify-content-between">
 	                <div>
-	                	<button class="add-wish btn btn-secondary">
-	                		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-                	    		<path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-                		  	</svg>
-                		  	<span>찜하기</span>
-                		</button>
-               		    <button class="cancel-wish btn btn-danger">
-               		    	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-	                		    <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
-	                		</svg>
-	                		<span>찜하기</span>
-                		</button>
-	                </div>
+		            	<button id="add-wish" class="btn btn-secondary">
+		            		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+		        	    		<path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+		        		  	</svg>
+		        		  	<span>찜하기</span>
+		        		</button>
+		       		    <button id="cancel-wish" class="btn btn-danger" style="display: none;">
+		       		    	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+		            		    <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+		            		</svg>
+		            		<span>찜하기</span>
+		        		</button>
+		            </div>
+		            <div>
+		            	<button id="insert-review" class="btn btn-primary">
+			            	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+			            	  <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
+			            	</svg>
+		            		<span>리뷰작성</span>
+		            	</button>
+		            </div>
                 </div>
 			</div>
-			<div id="movieImgBox" class="col-sm-6">
+			<div id="movieImgBox" class="col-sm-5">
 				<img id="movieImg" alt="영화 이미지" src="${imageUrl}">
 			</div>`;
 			$("movieBox").css('display','none');
@@ -114,63 +127,84 @@ $(document).ready(()=>{
 			imgs.onload = ()=>{
 				$("movieBox").css('display','block');	
 			}
+			//사용자가 로그인되어 있으면 실행
+			if(userId != "")
+				getWish();
+			
+			addWish();
+			cancelWish();
 		},
 		error:()=>{
 			alert("get movie details 실패");
 		}
 	});
-	let userId = $("#userId").val();// 임시데이터 3
 	// 서버에서 찜하기 정보 획득
-	/* $.ajax({
+	function getWish() {
+		$.ajax({
 		type:"GET",
-		url:"",
-		//data:{title:title,userId:userId}, //영화제목, 사용자 id
+		url:"/movie/wish",
+		data:{movieId:movieId,userId:userId}, //영화id, 사용자 id
 		success:(response)=>{
-			//response(wishList)에는 찜하기 목록(영화제목들)이 들어있을 것임
 			for(let i=0;i<response.length;i++){
-				if(response.wishListTitle != title) {// 들고온 찜하기 목록 제목과 title이 일치하지 않는다면(찜하기 목록에 없다면)
-						$(".add-wish").css('display','block');
-						$(".cancel-wish").css('display','none');
+				if(response[i].movieId != movieId) {// 들고온 찜하기 목록 id와 movieId가 일치하지 않는다면(찜하기 목록에 없다면)
+					$("#add-wish").css('display','block');
+					$("#cancel-wish").css('display','none');
 				} else {
-					$(".add-wish").css('display','none');
-					$(".cancel-wish").css('display','block');
+					$("#add-wish").css('display','none');
+					$("#cancel-wish").css('display','block');
 				}	
 			}
 		},
 		error:()=>{
-			alert("user정보 획득 실패");
+			alert("찜하기 정보 획득 실패");
 		}
-	}); */
+		});
+	}
 	
 	//찜하기 추가 버튼 클릭 이벤트
-	/* $(".add-wish").on("click",()=>{
-		$.ajax({
-			type:"POST",
-			url:"",
-			//data:{title:title,userId:userId},
-			success:(response)=>{
-				//위의 ajax get 반복
-			},
-			error:()=>{
-				alert("user정보 획득 실패");
+	function addWish() {
+		$("#add-wish").on("click",()=>{
+			if(userId == "") {
+				alert("로그인이 필요합니다");
 			}
-		})
-	}); */
+			else
+			$.ajax({
+				type:"POST",
+				url:"/movie/wish",
+				data:{movieId:movieId,userId:userId},
+				success:(response)=>{
+					$("#add-wish").css('display','none');
+					$("#cancel-wish").css('display','block');
+				},
+				error:()=>{
+					alert("user정보 획득 실패");
+				}
+			})
+		});
+	}
 	
-	//찜하기 취소 클릭 이벤트
-	/* $(".cancel-wish").on("click",()=>{
-		$.ajax({
-			type:"POST",
-			url:"",
-			//data:{title:title,userId:userId},
-			success:(response)=>{
-				//위의 ajax get 반복
-			},
-			error:()=>{
-				alert("user정보 획득 실패");
+	
+	//찜하기 해제 클릭 이벤트
+	function cancelWish() {
+		$("#cancel-wish").on("click",()=>{
+			if(userId == "") {
+				alert("로그인이 필요합니다");
 			}
-		})
-	}); */
+			else
+			$.ajax({
+				type:"DELETE",
+				url:"/movie/wish",
+				data:{movieId:movieId,userId:userId},
+				success:(response)=>{
+					$("#add-wish").css('display','block');
+					$("#cancel-wish").css('display','none');
+				},
+				error:()=>{
+					alert("user정보 획득 실패");
+				}
+			})
+		});
+	}
 	
 	
 	//네이버 api 요청
@@ -214,7 +248,7 @@ $(document).ready(()=>{
 	<header th:include="header"></header>
     <div class="container mt-3">
 		<input type="hidden" id="movieId" name="movieId" th:value="${movieId}">
-		<!-- <input type="hidden" id="userId" name="userId" th:value="${session.userId}"> 사용자 id-->
+		<input type="hidden" id="userId" name="userId" th:value="${session.userId}">
 		
 		<div id="movieBox" class="row">
 			<div id="movieImgBox" class="col-sm-4 mx-auto">
