--- a/bin/main/templates/MyPage/MyPageReview.html
+++ b/bin/main/templates/MyPage/MyPageReview.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="bg-black">
+<body class="bg-black h-100">
     <div class="h-100">
         <!-- 헤더 영역 -->
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
@@ -16,12 +16,23 @@
         
         <div class="row h-100 bg2ndColor">
             <!-- 네비게이션 영역 -->
-            <nav th:include="/Mypage/nav :: nav" class="col-lg-3  px-5">
+            <nav th:include="/Mypage/nav :: nav" class="col-lg-3  px-5 h-100">
             </nav>
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">    
-                <div>
-                    리뷰
+                <div class="w-75 mx-auto mt-3">
+                    <h3>리뷰 리스트</h3>
+                    <div>
+                        <div th:each="list : ${reviewList}" class="border border-1 border-light rounded m-2 float-start p-2" style="width: 270px;">
+                            <div class="text-center">
+                                <img th:src="${list.poster}" width="200px"></td>
+                            </div>
+                            <div class="p-2">
+                                <p th:text="|제목 : ${list.title}|"></p>  
+                                <p th:text="|작성일 : ${list.createdDt}|"></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
