--- a/bin/main/static/css/login.css
+++ b/bin/main/static/css/login.css
@@ -19,7 +19,10 @@
 		border-radius:50px;
 		width:100%
 	}
-
+	#btn-ajax-login{
+		border-radius:50px;
+		width:100%
+	}
 	main{
 		display: flex;
    		position: relative;
