--- a/src/main/resources/templates/Header.html
+++ b/src/main/resources/templates/Header.html
@@ -83,7 +83,7 @@
 						
 						<!-- 로그아웃 ajax -->
 						<input type="hidden"  id="userId" th:value="${session.userId}">
-						<input type="hidden"  id="adminPermission" value="${session.adminPermission}">
+						<input type="hidden"  id="adminPermission" th:value="${session.adminPermission}">
 						<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 						
 						<script>
@@ -95,7 +95,6 @@
 									success:function(data){
 										
 										console.log("로그아웃됨");
-										
 										location.href="/";
 										
 									},
