--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>추천 영화 상세보기 페이지</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/css/movieRec.css">
 <link rel="stylesheet" href="/css/style.css">
 <script>
@@ -27,21 +27,23 @@ $(document).ready(()=>{
 			// 이미지
 			let imageUrl ="https://image.tmdb.org/t/p/original";
 			// 포스터 이미지
-			let poster = response.poster_path;
-			imageUrl += poster;
+			let posterPath = response.poster_path;
+			let poster = imageUrl + posterPath;
 			// 백드랍 이미지
-			let backdrop= response.backdrop_path;
-			//imageUrl += backdrop;
+			let backdropPath= response.backdrop_path;
+			let backdrop = imageUrl + backdropPath;
 			
 			
 			// 영화 장르
-			let genres = response.genres;
-			let genre="";
-			for(let i=0;i<genres.length;i++){
-				genre += genres[i].name;
-				if(i<genres.length-1)
-					genre += ", ";
+			let genresArray = response.genres;
+			let genres="";
+			for(let i=0;i<genresArray.length;i++){
+				genres += genresArray[i].name;
+				if(i<genresArray.length-1)
+					genres += ", ";
 			}
+			// 영화 원제
+			let originalTitle =response.original_title;
 			// 영화 제목
 			let title = response.title;
 			// 영화 소개
@@ -49,7 +51,7 @@ $(document).ready(()=>{
 			// 영화 시놉시스
 			let overview = response.overview;
 			// 영화 개봉일
-			let release = response.release_date;
+			let releaseDate = response.release_date;
 			// 영화 런타임
 			let runtime = response.runtime;
 			// 영화 캐스팅
@@ -83,14 +85,14 @@ $(document).ready(()=>{
 			}
 			$("#movieBox").empty();
 			let temp_html = `<div id="movieDataBox" class="col-sm-7">
-				<h1 class="fw-bold">${title}</h1>
-				<h4 class="fw-bold">${tagline}</h4>
+				<h1 class="fw-bold mb-3">${title}<span class="text-secondary fs-3">(${originalTitle})</span></h1>
+				<h4 class="fw-bold text-muted">${tagline}</h4>
 				<div class="mb-3"><span>${overview}</span></div>
 				<div class="d-flex justify-content-between">
 	                <ul class="list-unstyled">	
 	                    <li class="text-secondary fw-bold"><span class="me-3">출연</span><span>${actors}</span></li>
-	                    <li class="text-secondary fw-bold"><span class="me-3">장르</span><span>${genre}</span></li>
-	                    <li class="text-secondary fw-bold"><span class="me-3">개요</span><span>${release} | ${runtime}분</span></li>
+	                    <li class="text-secondary fw-bold"><span class="me-3">장르</span><span>${genres}</span></li>
+	                    <li class="text-secondary fw-bold"><span class="me-3">개요</span><span>${releaseDate} | ${runtime}분</span></li>
 	                </ul>
 	                
                 </div>
@@ -118,9 +120,65 @@ $(document).ready(()=>{
 		            	</button>
 		            </div>
                 </div>
+                <div id="modal" class="modal-overlay">
+                	<div class="modal-window">
+                		<div class="d-flex justify-content-between">
+                		<div class="title">
+                			<h4 class="text-black">${title}</h4>
+                		</div>
+                		<div class="close-area">X</div>
+                		</div>
+                		<div class="content">
+			                <form action="/review" method="post">
+			                	<input type="hidden" id="movieId" name="movieId" value="${movieId}">
+			                	<input type="hidden" id="title" name="title" value="${title}">
+			                	<input type="hidden" id="backdrop" name="backdrop" value="${backdrop}">
+			                	<input type="hidden" id="poster" name="poster" value="${poster}">
+			                	<input type="hidden" id="genres" name="genres" value="${genres}">
+			                	<input type="hidden" id="actors" name="actors" value="${actors}">
+			                	<input type="hidden" id="overview" name="overview" value="${overview}">
+			                	<input type="hidden" id="tagline" name="tagline" value="${tagline}">
+			                	<input type="hidden" id="releaseDate" name="releaseDate" value="${releaseDate}">
+			                	<input type="hidden" id="runtime" name="runtime" value="${runtime}">
+			                	<input type="hidden" id="userId" name="userId" value="${userId}">
+			                	<div class="star-input">
+				                	<span class="input">
+				                    	<input type="radio" name="rating" value="1" id="rate1">
+				                    	<label for="rate1">1</label>
+				                    	<input type="radio" name="rating" value="2" id="rate2">
+				                    	<label for="rate2">2</label>
+				                    	<input type="radio" name="rating" value="3" id="rate3">
+				                    	<label for="rate3">3</label>
+				                    	<input type="radio" name="rating" value="4" id="rate4">
+				                    	<label for="rate4">4</label>
+				                    	<input type="radio" name="rating" value="5" id="rate5">
+				                    	<label for="rate5">5</label>
+				                    	<input type="radio" name="rating" value="6" id="rate6">
+				                    	<label for="rate6">6</label>
+				                    	<input type="radio" name="rating" value="7" id="rate7">
+				                    	<label for="rate7">7</label>
+				                    	<input type="radio" name="rating" value="8" id="rate8">
+				                    	<label for="rate8">8</label>
+				                    	<input type="radio" name="rating" value="9" id="rate9">
+				                    	<label for="rate9">9</label>
+				                    	<input type="radio" name="rating" value="10" id="rate10">
+				                    	<label for="rate10">10</label>
+				                  	</span>
+				                  	<span class="score text-black"><span id="score">0</span>점</span>
+				                </div>
+				                <textarea id="content" name="content" rows=8 class="form-control my-3" placeholder="리뷰를 작성해주세요"></textarea>
+				                <div class="d-flex justify-content-end">
+				                	<button type="submit" class="btn btn-success">등록하기</button>
+				                </div>
+				            </form>
+				        </div>
+				    </div>
+	            </div>
 			</div>
-			<div id="movieImgBox" class="col-sm-5">
-				<img id="movieImg" alt="영화 이미지" src="${imageUrl}">
+			<div id="movieImgBox" class="col-sm-5 row">
+				<div class="col-sm-8 mx-auto">
+					<img id="movieImg" alt="영화 이미지" src="${poster}">
+				</div>
 			</div>`;
 			$("movieBox").css('display','none');
 			let imgs = $("#movieBox").append(temp_html).find("#movieImg");
@@ -133,6 +191,8 @@ $(document).ready(()=>{
 			
 			addWish();
 			cancelWish();
+			insertReview();
+			starRating();
 		},
 		error:()=>{
 			alert("get movie details 실패");
@@ -206,7 +266,63 @@ $(document).ready(()=>{
 		});
 	}
 	
+	//리뷰 작성 버튼 모달
+	function insertReview() {
+		const modal = $("#modal");
+		$("#insert-review").on("click",()=>{
+			if(userId == "") {
+				alert("로그인이 필요합니다");
+			} else {
+				modal.css('display','flex');
+				
+				$(".close-area").on("click",()=>{
+					modal.css('display','none');
+				})
+				
+				modal.on("click", e=>{
+					if(e.target.classList.contains("modal-overlay")) {
+						modal.css('display','none');
+					}
+				})
+			}
+		})
+	}
 	
+	// 리뷰 별점
+	function starRating(){
+		let star = $(".star-input");
+		let result = $("#score");
+			
+		  	$(document).on("focusin", ".star-input>.input", 
+				function(){
+		   		 $(this).addClass("focus");
+		 	})
+				 
+		   	.on("focusout", ".star-input>.input", function(){
+		    	setTimeout(function(){
+		      		if($(this).find(":focus").length === 0){
+		      			$(this).removeClass("focus");
+		     	 	}
+		   		}, 100);
+		 	 })
+		  
+		    .on("change", ".star-input :radio", function(){
+		    	result.text($(this).next().text());
+		  	})
+		    .on("mouseover", ".star-input label", function(){
+		    	result.text($(this).text());
+		    })
+		    .on("mouseleave", ".star-input>.input", function(){
+		    	let checked = star.find(":checked");
+		    		if(checked.length === 0){
+		     	 		result.text("0");
+		   		 	} else {
+		     	 		result.text(checked.next().text());
+		    		}
+		  	});
+		};
+
+		
 	//네이버 api 요청
 	//let genre = $("#genre").val();
  	/* $.ajax({
