--- a/src/main/resources/templates/MyPage/MypageTrash.html
+++ b/src/main/resources/templates/MyPage/MypageTrash.html
@@ -20,8 +20,13 @@
             </nav>
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">    
-                <div>
-                    삭제한 리뷰
+                <div class="w-75 mx-auto mt-4">
+                    <div>
+                        <h3>리뷰 휴지통</h3>
+                    </div>
+                    <div>
+                        테이블영역
+                    </div>
                 </div>
             </main>
         </div>
